--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,8 +39,8 @@ li, a {
   margin-right: auto;
   background-color: $color-main;
   font-family: 'Dancing Script', cursive;
-  font-size: 60px;
-  margin-right: auto;
+  font-size: 40px;
+margin-right: 250px;
   background-image: linear-gradient(
     -75deg,
     transparent 0%,
@@ -64,7 +64,7 @@ li, a {
  
   display: flex;
   align-items: center; 
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
   list-style: none;
   overflow: hidden;
@@ -146,5 +146,17 @@ bottom: 160px;
     font-size: 60px;
     font-weight: 800;
   }
+  .span-header-services-mini {
+    padding-top: 30px;
+    font-size: 25px;
+    font-style: italic;
+    color: #636060;
+  }
+}
+
+.a-links {
+  display: flex;
+  flex-direction: row;
+  
 }
 
