--- a/sass/style.scss
+++ b/sass/style.scss
@@ -160,3 +160,18 @@ bottom: 160px;
   
 }
 
+// .offer {
+  
+// }
+// .offer i {
+//   margin-right: 15px;
+//   font-size: 30px;
+//   color: #fff;
+//   width: 60px;
+//   height: 60px;
+//   background-color: $color-main;
+//   border-radius: 50%;
+//   text-align: center;
+//   line-height: 60px;
+// }
+
