Add flex property to section services

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -160,9 +160,10 @@ bottom: 160px;
   
 }
 
-// .offer {
-  
-// }
+.offer {
+  display: flex;
+  flex-direction: row;
+}
 // .offer i {
 //   margin-right: 15px;
 //   font-size: 30px;
