--- a/sass/style.scss
+++ b/sass/style.scss
@@ -191,13 +191,15 @@ bottom: 160px;
 .three-boxes i {
     
     font-size: 50px;
-    color: #fff;
+    color: $color-main;
     width: 85px;
     height: 85px;
-    background-color: $color-main;
+    background-color: #fff;
     border-radius: 50%;
+    border: $color-main;
+    border-style: solid;
     text-align: center;
-    line-height:90px;
+    line-height:70px;
     margin-bottom: 20px;
   }
   .portfolio {
@@ -212,19 +214,21 @@ bottom: 160px;
     justify-content: center;
     h3 {
       text-align: center;
-      font-size: 14px;
-      margin-top: 5px;
+      font-size: 25px;
+      margin-top: 25px;
     }
     p{
       text-align: center;
       font-size: 14px;
       margin-top: 5px;
+    font-style: italic;
+    color: #636060;
     }
   }
   
   .column img {
-    width: 100%;
-    height: auto;
+    width: 350px;
+    height: 350px;
     margin-right: 3px;
   }
 
@@ -238,6 +242,8 @@ bottom: 160px;
   .column {
     flex: 33.33%;
     padding: 30px;
+    position: relative;
+    margin-bottom: 40px;
   }
   
   .header-portfolio {
@@ -258,4 +264,12 @@ bottom: 160px;
     font-size: 25px;
     font-style: italic;
     color: #636060;
+  }
+  
+  .photo-description {
+    background-color: #fff;
+    width: 350px;
+    height: 100px;
+    position: absolute;
+    top: 380px;
   }
