--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@ $color-main: #FFD700;
 }
 
 .container {
-  border: red solid;
+
   display: flex;
   flex-direction: column;
 
@@ -294,8 +294,10 @@ bottom: 160px;
     display: flex;
     flex-direction: row;
     position: relative;
+    padding: 50px;
 
     .footer-icons {
+      margin-top: 15px;
       flex: 2;
       display: flex;
       flex-direction: row;
@@ -319,12 +321,13 @@ bottom: 160px;
           transform: scale(1.2);
           transition: all 0.5s;
         }
+
     }
     }
   h5 {
     flex: 1;
     color: #3c3c3c;
-    margin-left: 60px;
+    margin-left: 20px;
     font-size: 20px;
     font-family: 'EB Garamond', serif;
 }
